--- a/styles/border.css
+++ b/styles/border.css
@@ -21,6 +21,7 @@
   border-radius: 25px;
 }
 
+
 .question-border-gradient {
   background: linear-gradient(#fff, #fff) padding-box,
               linear-gradient(45deg, #1937AD, #F93DE6) border-box;
@@ -35,3 +36,13 @@
   border-radius: 50px;
 }
 
+.summary-gradient{
+  background-image: linear-gradient(120deg,#1937AD 66.91%, #F93DE6 100%);
+}
+
+.summary-border-gradient{
+  background: linear-gradient(#fff, #fff) padding-box,
+  linear-gradient(45deg, #1937AD, #F93DE6) border-box;
+border: 1px solid transparent;
+border-radius: 10px;
+}
